--- a/Project.toml
+++ b/Project.toml
@@ -6,4 +6,5 @@ version = "0.1.0"
 [deps]
 AlgebraicRewriting = "725a01d3-f174-5bbd-84e1-b9417bad95d9"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
