--- a/Project.toml
+++ b/Project.toml
@@ -7,5 +7,7 @@ version = "0.1.0"
 AlgebraicRewriting = "725a01d3-f174-5bbd-84e1-b9417bad95d9"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
