--- a/Project.toml
+++ b/Project.toml
@@ -11,3 +11,7 @@ Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+
+[compat]
+Catlab = "^0.15"
+AlgebraicRewriting = "^0.2"
